Fix styles with the 'break the grid' changes
See #55, #56

--- a/public/less/pages/auth.less
+++ b/public/less/pages/auth.less
@@ -1,5 +1,9 @@
-label[for=agree_terms] { display: block; text-align: right; font-size: 0.75rem; }
-label[for=agree_terms] a { text-decoration: underline; }
+form.signup, form.signin { margin: 0 @margin_width; }
+
+label[for=agree_terms] {
+  display: block; text-align: right; font-size: 0.75rem; color: @font_color_secondary;
+}
+label[for=agree_terms] a { text-decoration: underline; color: @font_color_secondary; }
 label[for=agree_terms] a:hover { color: @brand_color; }
 label[for=agree_terms] .scheckbox { top: 0.5rem; margin-left: 0.5rem; }
 
